--- a/projects/ITFCodeWA.ClientMudBlazor/Pages/Project/References/FoodsPage.razor
+++ b/projects/ITFCodeWA.ClientMudBlazor/Pages/Project/References/FoodsPage.razor
@@ -1,7 +1,7 @@
 ﻿@page "/foods"
 
+@using ITFCodeWA.ClientMudBlazor.Components.EntityTableView.References
 @using ITFCodeWA.ClientMudBlazor.Components.PagePart
-@using ITFCodeWA.ClientMudBlazor.Components.References;
 @using ITFCodeWA.ClientMudBlazor.Models.ColumnSettings
 @using ITFCodeWA.ClientMudBlazor.Pages.Project.Basis.Analityca
 @using ITFCodeWA.ClientMudBlazor.Pages.Project.Basis.Catalogs
@@ -9,21 +9,15 @@
 @using ITFCodeWA.ClientMudBlazor.Static.ColumnSettings
 @using ITFCodeWA.Models.References;
 
-@inherits ReferenceBasePage<FoodModel, IFoodService>
-
-<ReferenceTemplatePage Title="Продукты питания" Loading="@Loading" LoadFailed="@LoadFailed" Error="@Error">
+<ReferenceTemplatePage Title="Продукты питания" Loading="false" LoadFailed="false">
     <PageContent>
         <MudTabs Elevation="2" Rounded="true" Centered="false" Style="font-size:90%;">
             <MudTabPanel Text="Продукты" Style="min-width:220px;justify-content:left;">
-                <ReferenceTable TModel="FoodModel" Table="@_table" Columns="@_columns"
-                                SelectedItem="@_selectedItem"
-                                ServerData="@ServerData"
-                                RelatedInfo="Информация о продуктах питания">
-                </ReferenceTable>
+                <FoodTableView ></FoodTableView>
             </MudTabPanel>
 
-            <MudTabPanel Text="Группы продуктов">
-
+            <MudTabPanel Text="Группы продуктов"  Style="min-width:220px;justify-content:left;">
+                <FoodGroupTableView ></FoodGroupTableView>
             </MudTabPanel>
         </MudTabs>
     </PageContent>
@@ -34,9 +28,6 @@
 
     protected override async Task OnInitializedAsync()
         => await base.OnInitializedAsync();
-
-    protected override void InitColumns()
-        => _columns = ColumnSettingSets.Foods;
 
     #endregion
 }
