--- a/projects/ITFCodeWA.ClientMudBlazor/Components/EntityTableView/References/Base/ReferenceTable.razor
+++ b/projects/ITFCodeWA.ClientMudBlazor/Components/EntityTableView/References/Base/ReferenceTable.razor
@@ -1,6 +1,8 @@
 ﻿@using ITFCodeWA.ClientMudBlazor.Models.ColumnSettings
+@using Microsoft.AspNetCore.Components;
 
 @typeparam TModel
+@typeparam TModelForm
 
 <MudTable @ref="Table" @bind-SelectedItem="SelectedItem"
           ServerData="@ServerData"
@@ -32,7 +34,7 @@
                                Size="@Size.Small"
                                Class="ma-2"
                                Style="padding:0px;padding-left:16px;"
-                               OnClick="() => {}"></MudIconButton>
+                               OnClick="() => OpenForm(context, FormTitle)"></MudIconButton>
             </MudTooltip>
         </MudTd>
     </RowTemplate>
@@ -64,4 +66,10 @@
 
     [Parameter]
     public string RelatedInfo { get; set; }
+
+    [Parameter]
+    public virtual string FormTitle { get; set; } = "Not Defined";
+
+    [Inject]
+    protected IDialogService DialogService { get; set; }
 }
