--- a/projects/ITFCodeWA.ClientMudBlazor/Components/EntityTableView/References/FoodTableView.razor
+++ b/projects/ITFCodeWA.ClientMudBlazor/Components/EntityTableView/References/FoodTableView.razor
@@ -11,6 +11,7 @@
                 Table="@_table" Columns="@_columns"
                 SelectedItem="@_selectedItem"
                 ServerData="@ServerData"
+                FormTitle="Информация о продукте питания"
                 RelatedInfo="Информация о продуктах питания">
 </ReferenceTable>
 
