--- a/projects/ITFCodeWA.ClientMudBlazor/Components/EntityTableView/References/FoodGroupTableView.razor
+++ b/projects/ITFCodeWA.ClientMudBlazor/Components/EntityTableView/References/FoodGroupTableView.razor
@@ -1,4 +1,5 @@
-﻿@using ITFCodeWA.ClientMudBlazor.Components.EntityForms.References
+﻿@using ITFCodeWA.ClientMudBlazor.Components.EntityCards.References
+@using ITFCodeWA.ClientMudBlazor.Components.EntityForms.References
 @using ITFCodeWA.ClientMudBlazor.Components.EntityTableView.References.Base
 @using ITFCodeWA.ClientMudBlazor.Services.Api.References.Interfaces
 @using ITFCodeWA.ClientMudBlazor.Static.ColumnSettings
@@ -6,7 +7,7 @@
 
 @inherits ReferenceTableView<FoodGroupModel, IFoodGroupService>
 
-<ReferenceTable TModel="FoodGroupModel" TModelForm="FoodGroupFormView"
+<ReferenceTable TModel="FoodGroupModel" TModelForm="FoodGroupCard"
                 Table="@_table" Columns="@_columns"
                 SelectedItem="@_selectedItem"
                 ServerData="@ServerData"
