--- a/projects/ITFCodeWA.ClientMudBlazor/Components/EntityTableView/References/FoodGroupTableView.razor
+++ b/projects/ITFCodeWA.ClientMudBlazor/Components/EntityTableView/References/FoodGroupTableView.razor
@@ -11,8 +11,8 @@
                 Table="@_table" Columns="@_columns"
                 SelectedItem="@_selectedItem"
                 ServerData="@ServerData"
-                FormTitle="Информация о группе продуктов питания"
-                RelatedInfo="Информация о группах продуктов питания">
+                FormTitle="Информация о группе продуктов питания (1)"
+                RelatedInfo="Информация о группах продуктов питания(1)">
 </ReferenceTable>
 
 @code {
