--- a/projects/ITFCodeWA.ClientMudBlazor/Components/EntityGrids/Base/EntityGridTemplate.razor
+++ b/projects/ITFCodeWA.ClientMudBlazor/Components/EntityGrids/Base/EntityGridTemplate.razor
@@ -1,4 +1,5 @@
 ﻿@using ITFCodeWA.ClientMudBlazor.Models.ColumnSettings
+
 @typeparam TModel
 
 <MudTable @ref="Table" ServerData="@ServerData" @bind-SelectedItem="@SelectedItem"
@@ -30,18 +31,22 @@
         }
 
         <MudTd Class="action-column">
-            <MudTooltip Text="Редактировать" Class="float-right">
+            
+            <MudTooltip Text="Редактировать позицию" Class="float-right">
                 <MudIconButton Icon="@Icons.Filled.Edit"
                                Size="@Size.Small"
                                Title="Открыть позицию"
                                Class="ma-2"
-                               Style="padding:0px;padding-left:16px;"
+                               Style="padding1:0px;padding1-left:16px;"
                                OnClick="() => OpenItemCardHandler(context)"></MudIconButton>
+            </MudTooltip>
+            
+            <MudTooltip Text="Удалить позицию" Class="float-right">
                 <MudIconButton Icon="@Icons.Filled.Delete"
                                Size="@Size.Small"
                                Title="Удалить позицию"
                                Class="ma-2"
-                               Style="padding:0px;padding-left:16px;"
+                               Style="padding1:0px;padding1-left:16px;"
                                OnClick="() => DeleteItemHandler(context)"></MudIconButton>
             </MudTooltip>
         </MudTd>
@@ -60,9 +65,9 @@
     </MudAlert>
 }
 
-<MudMessageBox @ref="_mbox" Title="Error" CancelButton="null" CancelText="null">
+<MudMessageBox @ref="_mbox" Title="Error">
     <MessageContent>
-        <MudAlert Severity="Severity.Error"> 
+        <MudAlert Severity="Severity.Error">
             @_messageText
         </MudAlert>
     </MessageContent>
