--- a/projects/ITFCodeWA.ClientMudBlazor/Components/EntityGrids/Base/EntityGridTemplate.razor
+++ b/projects/ITFCodeWA.ClientMudBlazor/Components/EntityGrids/Base/EntityGridTemplate.razor
@@ -1,4 +1,5 @@
 ﻿@using ITFCodeWA.ClientMudBlazor.Models.ColumnSettings
+@using ITFCodeWA.ClientMudBlazor.Components.Buttons.Operations
 
 @typeparam TModel
 
@@ -8,6 +9,7 @@
     <ToolBarContent>
         <MudText Typo="Typo.h6">@ToolBarLabel</MudText>
         <MudSpacer />
+        <ItfAddBtn OnClick="() => AddNew()"> Новый </ItfAddBtn>
     </ToolBarContent>
 
     <HeaderContent>
@@ -31,7 +33,7 @@
         }
 
         <MudTd Class="action-column">
-            
+
             <MudTooltip Text="Редактировать позицию" Class="float-right">
                 <MudIconButton Icon="@Icons.Filled.Edit"
                                Size="@Size.Small"
@@ -40,7 +42,7 @@
                                Style="padding1:0px;padding1-left:16px;"
                                OnClick="() => OpenItemCardHandler(context)"></MudIconButton>
             </MudTooltip>
-            
+
             <MudTooltip Text="Удалить позицию" Class="float-right">
                 <MudIconButton Icon="@Icons.Filled.Delete"
                                Size="@Size.Small"
@@ -142,6 +144,11 @@
             bool? result = await _mbox.Show();
             StateHasChanged();
         }
+    }
+
+    protected async Task AddNew() 
+    {
+        await OpenItemCardHandler(default(TModel));
     }
 
     #endregion
